--- a/eca2.cabal
+++ b/eca2.cabal
@@ -83,7 +83,7 @@ common common-options
 
 library
   import: common-options
-  hs-source-dirs: src
+  hs-source-dirs: src/stackprocessor
   default-language: Haskell2010
 
 -- Builds the executable 'clash', with tutorial project in scope
