--- a/eca2.cabal
+++ b/eca2.cabal
@@ -88,7 +88,8 @@ library
     - src/filters
     - src/centerofmass
   exposed-modules:
-    -- Exc2_2_Stack
+    Filters12
+    FilterCoefAndInput
     -- Exc6_Processor
     -- Exc7_Fetch
     -- Exc8_System
